#APPBUG-1841 help popup z-index fix
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@25910 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pdp/fixedpopup.css
+++ b/projects/Media/docroot/assets/css/pdp/fixedpopup.css
@@ -6,7 +6,7 @@
 	height:100%;
 	display:none;
 	text-align:center;
-	z-index:1002;
+	z-index:2002;
 }
 
 .fixedPopupHelper {
